<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JARLesProject</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_tittle">Welcome</string>
    <string name="jarles_tittle">JARLes</string>
    <string name="new_grid_button">New grid</string>
    <string name="load_grid_button">Load grid</string>
    <string name="exit_button">Exit</string>
    <string name="about_button">About</string>
    <string name="title_activity_grid">Draw New Grid</string>
    <string name="title_activity_load">LoadActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="title_activity_save_route">SaveRouteActivity</string>

</resources>
