<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufpe.cin.jarlesproject.MainActivity$PlaceholderFragment" >
	
    <LinearLayout android:orientation="vertical"
        		  android:layout_width="match_parent"
        		  android:layout_height="wrap_content"
        		  android:gravity="center"
        		  >
       
        <TextView android:text="@string/welcome_tittle"
            	  android:layout_marginBottom="25dip"
            	  android:textSize="24.5dp"
            	  android:layout_height="wrap_content"
            	  android:layout_width="wrap_content"
            	  android:layout_gravity="center"/>
        
        <TextView android:text="@string/jarles_tittle"
            	  android:layout_marginBottom="25dip"
            	  android:textSize="24.5dp"
            	  android:layout_height="wrap_content"
            	  android:layout_width="wrap_content"
            	  android:layout_gravity="center"/>
        
        <Button	android:id="@+id/new_grid_button"
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:text="@string/new_grid_button"
            	android:onClick="draw_new_grid"/>
        
        <Button	android:id="@+id/load_grid_button"
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:text="@string/load_grid_button"/>
        
        <Button	android:id="@+id/about_button"
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:text="@string/about_button"/>
        
        <Button	android:id="@+id/exit_button"
            	android:layout_width="fill_parent"
            	android:layout_height="fill_parent"
            	android:text="@string/exit_button"/>
        
    </LinearLayout>
</LinearLayout>
